# etcpp_CADExchanger

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt
lib/src/: circle.cpp  circle.h  curve.h  ellipse.cpp  ellipse.h  spiral.cpp  spiral.h
src/: main.cpp
